--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,6 +1,7 @@
 $primary-color: #007acc;
 $secondary-color: #f9f9f9;
-$base-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 $text-color: #333;
 $text-muted: #777;
 $section-padding: 4rem 2rem;
